force-app/main/default/objects/amazonconnect__AC_ReplicaInstance__c/amazonconnect__AC_ReplicaInstance__c.object-meta.xml
<CustomObject>
    <label>AC Replica Instance</label>
    <nameField>
        <label>Replica Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Replica Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>