force-app/main/default/objects/amazonconnect__AC_ReplicaInstance__c/fields/amazonconnect__CtiAdapter__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CtiAdapter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cti Adapter</label>
    <referenceTo>amazonconnect__AC_CtiAdapter__c</referenceTo>
    <relationshipLabel>Cti Adapter Replica Instance</relationshipLabel>
    <relationshipName>CtiAdapter_Replica</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>