force-app/main/default/objects/amazonconnect__AC_ReplicaInstance__c/fields/amazonconnect__Instance__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Instance__c</fullName>
    <label>Amazon Connect Replica Instance Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>