force-app/main/default/objects/amazonconnect__AC_ReplicaInstance__c/fields/amazonconnect__NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__NamedCredential__c</fullName>
    <inlineHelpText>Optional: This is the Named Credential used for the &quot;Recording Controls&quot; feature. If this is empty, a default value of &quot;AmazonConnectAPI&quot; will be assumed.</inlineHelpText>
    <label>Recording Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>