force-app/main/default/objects/amazonconnect__AC_ReplicaInstance__c/recordTypes/amazonconnect__Standard.recordType-meta.xml
<RecordType>
    <fullName>amazonconnect__Standard</fullName>
    <active>true</active>
    <description>The standard record type for AC Replica Instances</description>
    <label>Standard Record Type</label>
</RecordType>